# URL-Phishing-Detector-with-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
