[package]
name = "URL-Phishing-Detector"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
url = "2"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
